# photo-returns

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: CLAUDE.md
.github/workflows/: build-release.yml
src/: App.css  App.tsx  mock-data.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: burst.rs  lib.rs  main.rs  orientation.rs  photo_core.rs  video_metadata.rs
src/components/: DefaultSettings.tsx  DirectorySelection.tsx  Footer.tsx  Header.tsx  LightBox.tsx  LogViewer.tsx  MainLayout.tsx  ProcessSummary.tsx  ProcessingFlow.tsx  ScrollToTopButton.tsx
src/hooks/: useMediaTableColumns.tsx
