[package]
name = "photo-returns"
version = "0.1.0"
description = "PhotoReturns: Take back your memories"
authors = ["kako-jun"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "photo_returns_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# y4m2d2からのコア機能用依存関係
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
kamadak-exif = "0.6"
image = "0.24"
thiserror = "1.0"
walkdir = "2.4"  # ディレクトリ走査用

